<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/navigation_activities"
        android:icon="@drawable/ic_activities"
        android:title="@string/nav_activities" />

    <item
        android:id="@+id/navigation_training"
        android:icon="@drawable/ic_training"
        android:title="@string/nav_training" />

    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/ic_social"
        android:title="@string/nav_social" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>
